dark mode update and quick fixes

--- a/css/code.css
+++ b/css/code.css
@@ -18,7 +18,7 @@
 /* Code Block Container Styling */
 .code {
     width: 100%;
-    min-width: 500px;
+    min-width: 300px;
     max-width: 700px;
     height: 100%;
     background-color: #2c2c2c;
